@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-22T08:17:19Z",
-  "count_outdated" : 844,
-  "uniques_outdated" : 496,
-  "count" : 865,
+  "timestamp" : "2023-09-22T16:17:38Z",
+  "count_outdated" : 846,
+  "uniques_outdated" : 497,
+  "count" : 866,
   "uniques" : 511,
   "clones" : [
-    {
-      "timestamp": "2023-09-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-09T00:00:00Z",
       "count": 3,
@@ -97,9 +88,9 @@
     },
     {
       "timestamp": "2023-09-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
