@@ -1,3 +1,12 @@
+2023-09-22T16:17:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6276656171 # 1217
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-22
+* notice: last 14d: unq all: 2 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 496 844 / 511 865
+* notice: next accum: outdated-unq outdated-all / unq all: 497 846 / 511 866
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2023-09-08] / [2023-09-22]
+
 2023-09-22T08:17:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6271836365 # 1216
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-22
